--- a/css/barrel.css
+++ b/css/barrel.css
@@ -129,8 +129,8 @@
         --control-fg: var(--grey-2);
         --graphical-fg: var(--grey-1);
 
-        --concave-item-bg: none;
-        --convex-item-bg: none;
+        --concave-item-bg: var(--control-bg);
+        --convex-item-bg: var(--control-bg);
         --convex-item-active-bg: var(--grey-1);
         --concave-item-box-shadow: none;
     }
